<?xml version="1.0" encoding="utf-8"?>
<!--For The Login, User Just Need To Enter Username & Password Data and Click Login Button -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <EditText
            android:id="@+id/loginUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/prompt_login_user_name"/>

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/prompt_login_password"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:textColor="@color/layout_text_color" />

        <Button
            android:id="@+id/loginRegistrationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/layout_selected_text_color"
            android:text="@string/login_registration_button"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>