<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/layout_background_color"
    tools:context=".AccountInformationActivity">
    <Button
        android:id="@+id/btn_turning_post_list_activity_account_information"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@color/layout_background_third_color"
        android:text="@string/btn_turning_post_list_activity_account_information"
        android:textColor="@color/layout_selected_text_color"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/tv_user_id_text"
            android:textColor="@color/layout_text_color"
            android:textSize="22sp"/>
        <TextView
            android:id="@+id/tv_user_id"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:textColor="@color/layout_text_color"
            android:textSize="16sp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/tv_user_dn_text"
            android:textColor="@color/layout_text_color"
            android:textSize="22sp"/>
        <TextView
            android:id="@+id/tv_user_dn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:textColor="@color/layout_text_color"
            android:textSize="16sp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/tv_user_un_text"
            android:textColor="@color/layout_text_color"
            android:textSize="22sp"/>
        <TextView
            android:id="@+id/tv_user_un"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:textColor="@color/layout_text_color"
            android:textSize="16sp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/tv_user_student_hash_text"
            android:textColor="@color/layout_text_color"
            android:textSize="22sp"/>
        <TextView
            android:id="@+id/tv_user_student_hash"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:textColor="@color/layout_text_color"
            android:textSize="16sp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/tv_user_phone_text"
            android:textColor="@color/layout_text_color"
            android:textSize="22sp"/>
        <TextView
            android:id="@+id/tv_user_phone"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:textColor="@color/layout_text_color"
            android:textSize="16sp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/tv_user_country_text"
            android:textColor="@color/layout_text_color"
            android:textSize="22sp"/>
        <TextView
            android:id="@+id/tv_user_country"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:textColor="@color/layout_text_color"
            android:textSize="16sp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/tv_user_pw_text"
            android:textColor="@color/layout_text_color"
            android:textSize="22sp"/>
        <TextView
            android:id="@+id/tv_user_pw"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:textColor="@color/layout_text_color"
            android:textSize="16sp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/tv_user_change_pw_text"
        android:textAlignment="center"
        android:textColor="@color/layout_text_color"
        android:textSize="22sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/edt_user_change_pw_text"
            android:textColor="@color/layout_text_color"
            android:textSize="22sp"/>
        <EditText
            android:id="@+id/edt_user_change_pw"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/edt_user_change_pw_hint"
            android:textColorHint="@color/edit_text_hint_color"
            android:inputType="textPassword"
            android:textColor="@color/layout_text_color"
            android:textSize="16sp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray" />
    <Button
        android:id="@+id/btn_change_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@color/layout_background_third_color"
        android:text="@string/btn_change_password_text"
        android:textColor="@color/layout_selected_text_color"/>
</LinearLayout>